poke/testsuite/poke.pkl/sref-diag-2.pk
/* { dg-do compile } */

deftype Foo =
  struct
  {
    defun f = int: { return 10; }
    int c;
  };

defvar n = (Foo{}).f; /* { dg-error "exist" } */
